welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:49: error: Unmatched closing brace '}' ignored here
}
^